<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/ivDeal_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/deal_image"/>
    <TextView
            android:id="@+id/tvDealTitle"
            android:text="@string/deal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivDeal_thumb"
            android:textSize="@dimen/large_text"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/tvDealDescription"
            android:text="@string/deal_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDealTitle"
            app:layout_constraintStart_toEndOf="@+id/ivDeal_thumb"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/tvPrice"
            android:text="@string/deal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDealDescription"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
