<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DealActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserDealTitleHead"
            android:text="@string/deal_title"
            android:padding="@dimen/small_padding"
            android:textSize="@dimen/large_text"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="@dimen/medium_margin"
            android:id="@+id/tvUserDealTitle"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserDealPriceHead"
            android:text="@string/deal_price"
            android:padding="@dimen/small_padding"
            android:textSize="@dimen/large_text"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserDealPrice"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="@dimen/medium_margin"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserDealDescriptionHead"
            android:padding="@dimen/small_padding"
            android:text="@string/deal_description"
            android:textSize="@dimen/large_text"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="@dimen/medium_margin"
            android:id="@+id/tvUserDealDescription"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@color/fui_transparent"
            android:contentDescription="@string/deal_image"
            android:id="@+id/ivUserDealImg"/>
</LinearLayout>