<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:columnCount="2"
        tools:context=".AdminActivities.AdminDashBoardActivity">
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

        <TextView
                android:id="@+id/tvTotalDealsTitle"
                android:text="@string/total_deals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/large_text"
                android:layout_columnWeight="1"/>
        <TextView
                android:id="@+id/tvTotalDeals"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/large_text"
                android:layout_columnWeight="1"/>
        <TextView
                android:id="@+id/tvTotalViewsTitle"
                android:text="@string/total_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/large_text"
                android:layout_columnWeight="1"/>
        <TextView
                android:id="@+id/tvTotalViews"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/large_text"
                android:layout_columnWeight="1"/>
        <!--<TextView
                android:id="@+id/tvDealsNotViewedTitle"
                android:text="@string/deals_not_viewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/large_text"
                android:layout_columnWeight="1"/>
        <TextView
                android:id="@+id/tvDealsNotViewed"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/large_text"
                android:layout_columnWeight="1"/>-->
    </GridLayout>
    <Button android:id="@+id/btnViewDeals"
            android:text="@string/deals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="view_deals"/>
</LinearLayout>